--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
         <script src="js/main.js" defer></script>
     </head>
     <body>
-        <h1>Book Site</h1>
-        <p>test</p>
+        <div class="content"></div>
     </body>
 </html>
